Add javascript to code

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
   <h1>Basic Git Workflow</h1>
   <p>Welcome to the Git tutorial</p>
+  <script src="script.js"></script>
 </body>
 </html>
